<resources>
    <string name="app_name">Employme</string>
    <string name="Sign_in">Sign in</string>
    <string name="enter_e_mail">Enter E-mail:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="linkedin">twitter</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">LOGIN</string>
    <string name="or_sign_in_with">or Sign in with</string>
    <string name="job_title_keywords_or_company">job title, keywords, or company</string>
    <string name="city_or_province">city or province</string>
</resources>